--- a/r/test.Rmd
+++ b/r/test.Rmd
@@ -19,29 +19,13 @@ library(rasterVis)
 source('fill.up.R')
 source('calculate.breach.area.R')
 source('calculate.flooded.area.R')
+
+options(shiny.maxRequestSize = 10*1024^2)#set file upload size to 10 MB
 ```
 
-```{r input, echo=FALSE}
-#All interactive input variables
-inputPanel( 
-  fileInput('DEM',label='Input DEM'), #upload file
-  numericInput("breach.width", label= "Breach width", 
-              min=0,max=1000,value=200),#set breach width
-  sliderInput("water.height", label= "Water height",
-              min=1,max=20,value=1),#set water height
-  numericInput("coord.x", label= "X coordinate", 
-              value=46015.33),#x.coordinate
-  numericInput("coord.y", label= "Y coordinate", 
-              value=418028),#y.coordinate
-  sliderInput("time.hour", label= "Time in hours",
-              min=1,max=24,value=1),#set time
-  actionButton("goButton","Go!"))
-
-```
-
-```{r plot, echo=FALSE}
+```{r Server, echo=FALSE}
 #Create plot from the inputvariables
-renderPlot({ 
+output$plot<-renderPlot({
     #Get variables for functions
     if (is.null(input$DEM)){
       return(NULL)} #return NULL with no input data
@@ -74,7 +58,35 @@ renderPlot({
                                 col='red', fill='red', first=FALSE)))+
     as.layer(spplot(DEM, col.regions=DEMPallette), under=T)
     })
+output$coord<- renderTable({
+  if(is.null(input$click)){return(NULL)}
+  data.frame(input$click)
+  })
 ```
 
-
-DEM files are available [here](http://www.arcgis.com/home/webmap/viewer.html?webmap=ac6b6ecd42424e33bd0e6fa09499c563).
+```{r UI, echo=FALSE}
+#All interactive input variables
+fluidPage(
+  sidebarLayout(
+    sidebarPanel( 
+      fileInput('DEM',label='Input DEM', accept=c('.tif')), #upload file
+      p('Example DEM-files are available', a('here', href='http://www.arcgis.com/home/webmap/viewer.html?webmap=ac6b6ecd42424e33bd0e6fa09499c563', target="_blank")),# add URL
+      numericInput("breach.width", label= "Breach width", 
+                 min=0,max=1000,value=200),#set breach width
+      sliderInput("water.height", label= "Water height",
+                 min=1,max=20,value=1, step=0.1),#set water height
+      numericInput("coord.x", label= "X coordinate", 
+                 value=46015.33),#x.coordinate
+      numericInput("coord.y", label= "Y coordinate", 
+                 value=418028),#y.coordinate
+      sliderInput("time.hour", label= "Time in hours",
+                 min=1,max=24,value=1),#set time
+      actionButton("goButton","Go!")),
+    mainPanel(
+      plotOutput("plot", clickId="click"),
+      tableOutput("coord")),
+    fluid=T
+    )
+    )
+  
+```
