--- a/PresentationFinal.Rmd
+++ b/PresentationFinal.Rmd
@@ -5,10 +5,11 @@ date: "Thursday, January 29, 2015"
 output: slidy_presentation
 ---
 
-## Introduction
+
+# Introduction
 
 Project: 
-Simulate flooding as a result of a levee breach
+Simulate the flooding a dyke breach would cause
 
 Content based on main.R:
 
@@ -16,54 +17,67 @@ Content based on main.R:
 - Used functions
 - Shiny
 - Output
-(image of goal)
 
-## Input Data
+![DEMs](www/intro.jpg)
+
+
+# Input Data
 
 - Base of all scripts is a Digital Elevation Map[DEM]
 - Algemene Hoogtebestand Nederland
 - Raster package::getData('alt', countrycode)
 
-(image of AHN, image getData)
+![DEMs](www/DEM.png)
 
-## Used functions
+  
+# Used functions
 
-Calculate breach area
+### Calculate breach area
 
 - Input breach coordinates and width
 - Create buffer around coordinates 
 - If multiple breaches loop through breaches and create buffer for each breach
 - Output one or multiple SpatialPolygons
-(image)
 
-Create a DEM with breache(s)
+![DEMs](www/breacharea.png)
+
+# Used functions
+
+### Create a DEM with breache(s)
 
 - Input DEM and breach.area
 - Extract minimum value for each unique SpatialPolygon
 - Rasterize the polygons
 - Merge polygons with DEM
 - Output DEM with adjusted height for breach areas
-(image)
 
-Calculate flooded area
+![DEMs](www/DEMwithBreach.png)
+
+# Used functions
+
+### Calculate flooded area
 
 - Input breach.area, water.height & DEM.withbreach
 - Fill up the DEM with adjusted height. All values lower than the water height are removed and all other cells receive the value (waterheight-height)
 - Group all adjacent rastercells with the same waterdepth value
 - Select groups that are located in the breach area's and set cellvalue to waterdepth
-(image)
 
-Create basemap
+![DEMs](www/waterdepth.png)
+
+# Used functions
+
+### Create basemap
 
 - Input flooded area
 - Re-project the extent of the flooded area to the coordinate system of OpenStreetMap
 - Download OpenStreetMap data that is within the extent
 - Re-project data to coordinate system of flooded area
 - Output basemap
-(image)
+
+![DEMs](www/basemap.png)
 
 
-## Shiny
+# Shiny
 
 ###UserInterface
 
@@ -81,18 +95,20 @@ circa **300** lines of code!
 
 ![UI](www/UI.png)
 
-## Output
+# Output
 
-#Achievements
+## Achievements
 
 - Script is working globally
 - Multiple breaches are possible
 - Total flooded area and distribution of waterdepth in a histogram
 - Accessible by everyone, everywhere
 
-# Example Netherlands
+## Example Netherlands
 
 ![NLD](www/country.png)
 ![hist](www/hist.png)
 
-[Go to application](http://https://wilmarvanommeren.shinyapps.io/floodrisk/)
+[Go to application](https://wilmarvanommeren.shinyapps.io/floodrisk/)
+
+# Wat we geleerd hebben
